src/en/grammar.js
var grammar = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "start": parse_start,
        "sequence": parse_sequence,
        "sequence_post_enclosed": parse_sequence_post_enclosed,
        "sequence_post": parse_sequence_post,
        "range": parse_range,
        "b": parse_b,
        "b_range": parse_b_range,
        "bc": parse_bc,
        "bc_comma": parse_bc_comma,
        "bc_title": parse_bc_title,
        "bcv": parse_bcv,
        "bcv_weak": parse_bcv_weak,
        "bcv_comma": parse_bcv_comma,
        "bcv_hyphen_range": parse_bcv_hyphen_range,
        "bv": parse_bv,
        "cb": parse_cb,
        "cb_range": parse_cb_range,
        "cbv": parse_cbv,
        "cb_ordinal": parse_cb_ordinal,
        "cbv_ordinal": parse_cbv_ordinal,
        "c_psalm": parse_c_psalm,
        "cv_psalm": parse_cv_psalm,
        "c_title": parse_c_title,
        "cv": parse_cv,
        "cv_weak": parse_cv_weak,
        "c": parse_c,
        "ff": parse_ff,
        "integer_title": parse_integer_title,
        "ps151_b": parse_ps151_b,
        "ps151_bc": parse_ps151_bc,
        "ps151_bcv": parse_ps151_bcv,
        "v_letter": parse_v_letter,
        "v": parse_v,
        "c_explicit": parse_c_explicit,
        "v_explicit": parse_v_explicit,
        "cv_sep": parse_cv_sep,
        "cv_sep_weak": parse_cv_sep_weak,
        "sequence_sep": parse_sequence_sep,
        "range_sep": parse_range_sep,
        "title": parse_title,
        "in_book_of": parse_in_book_of,
        "abbrev": parse_abbrev,
        "translation_sequence_enclosed": parse_translation_sequence_enclosed,
        "translation_sequence": parse_translation_sequence,
        "translation": parse_translation,
        "integer": parse_integer,
        "any_integer": parse_any_integer,
        "word": parse_word,
        "word_parenthesis": parse_word_parenthesis,
        "sp": parse_sp,
        "space": parse_space
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "start";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_start() {
        var result0, result1;
        
        result1 = parse_bcv_hyphen_range();
        if (result1 === null) {
          result1 = parse_sequence();
          if (result1 === null) {
            result1 = parse_cb_range();
            if (result1 === null) {
              result1 = parse_range();
              if (result1 === null) {
                result1 = parse_ff();
                if (result1 === null) {
                  result1 = parse_bcv_comma();
                  if (result1 === null) {
                    result1 = parse_bc_title();
                    if (result1 === null) {
                      result1 = parse_ps151_bcv();
                      if (result1 === null) {
                        result1 = parse_bcv();
                        if (result1 === null) {
                          result1 = parse_bcv_weak();
                          if (result1 === null) {
                            result1 = parse_ps151_bc();
                            if (result1 === null) {
                              result1 = parse_bc();
                              if (result1 === null) {
                                result1 = parse_cv_psalm();
                                if (result1 === null) {
                                  result1 = parse_bv();
                                  if (result1 === null) {
                                    result1 = parse_b_range();
                                    if (result1 === null) {
                                      result1 = parse_c_psalm();
                                      if (result1 === null) {
                                        result1 = parse_b();
                                        if (result1 === null) {
                                          result1 = parse_cbv();
                                          if (result1 === null) {
                                            result1 = parse_cbv_ordinal();
                                            if (result1 === null) {
                                              result1 = parse_cb();
                                              if (result1 === null) {
                                                result1 = parse_cb_ordinal();
                                                if (result1 === null) {
                                                  result1 = parse_translation_sequence_enclosed();
                                                  if (result1 === null) {
                                                    result1 = parse_translation_sequence();
                                                    if (result1 === null) {
                                                      result1 = parse_sequence_sep();
                                                      if (result1 === null) {
                                                        result1 = parse_c_title();
                                                        if (result1 === null) {
                                                          result1 = parse_integer_title();
                                                          if (result1 === null) {
                                                            result1 = parse_cv();
                                                            if (result1 === null) {
                                                              result1 = parse_cv_weak();
                                                              if (result1 === null) {
                                                                result1 = parse_v_letter();
                                                                if (result1 === null) {
                                                                  result1 = parse_integer();
                                                                  if (result1 === null) {
                                                                    result1 = parse_c();
                                                                    if (result1 === null) {
                                                                      result1 = parse_v();
                                                                      if (result1 === null) {
                                                                        result1 = parse_word();
                                                                        if (result1 === null) {
                                                                          result1 = parse_word_parenthesis();
                                                                        }
                                                                      }
                                                                    }
                                                                  }
                                                                }
                                                              }
                                                            }
                                                          }
                                                        }
                                                      }
                                                    }
                                                  }
                                                }
                                              }
                                            }
                                          }
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        if (result1 !== null) {
          result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            result1 = parse_bcv_hyphen_range();
            if (result1 === null) {
              result1 = parse_sequence();
              if (result1 === null) {
                result1 = parse_cb_range();
                if (result1 === null) {
                  result1 = parse_range();
                  if (result1 === null) {
                    result1 = parse_ff();
                    if (result1 === null) {
                      result1 = parse_bcv_comma();
                      if (result1 === null) {
                        result1 = parse_bc_title();
                        if (result1 === null) {
                          result1 = parse_ps151_bcv();
                          if (result1 === null) {
                            result1 = parse_bcv();
                            if (result1 === null) {
                              result1 = parse_bcv_weak();
                              if (result1 === null) {
                                result1 = parse_ps151_bc();
                                if (result1 === null) {
                                  result1 = parse_bc();
                                  if (result1 === null) {
                                    result1 = parse_cv_psalm();
                                    if (result1 === null) {
                                      result1 = parse_bv();
                                      if (result1 === null) {
                                        result1 = parse_b_range();
                                        if (result1 === null) {
                                          result1 = parse_c_psalm();
                                          if (result1 === null) {
                                            result1 = parse_b();
                                            if (result1 === null) {
                                              result1 = parse_cbv();
                                              if (result1 === null) {
                                                result1 = parse_cbv_ordinal();
                                                if (result1 === null) {
                                                  result1 = parse_cb();
                                                  if (result1 === null) {
                                                    result1 = parse_cb_ordinal();
                                                    if (result1 === null) {
                                                      result1 = parse_translation_sequence_enclosed();
                                                      if (result1 === null) {
                                                        result1 = parse_translation_sequence();
                                                        if (result1 === null) {
                                                          result1 = parse_sequence_sep();
                                                          if (result1 === null) {
                                                            result1 = parse_c_title();
                                                            if (result1 === null) {
                                                              result1 = parse_integer_title();
                                                              if (result1 === null) {
                                                                result1 = parse_cv();
                                                                if (result1 === null) {
                                                                  result1 = parse_cv_weak();
                                                                  if (result1 === null) {
                                                                    result1 = parse_v_letter();
                                                                    if (result1 === null) {
                                                                      result1 = parse_integer();
                                                                      if (result1 === null) {
                                                                        result1 = parse_c();
                                                                        if (result1 === null) {
                                                                          result1 = parse_v();
                                                                          if (result1 === null) {
                                                                            result1 = parse_word();
                                                                            if (result1 === null) {
                                                                              result1 = parse_word_parenthesis();
                                                                            }
                                                                          }
                                                                        }
                                                                      }
                                                                    }
                                                                  }
                                                                }
                                                              }
                                                            }
                                                          }
                                                        }
                                                      }
                                                    }
                                                  }
                                                }
                                              }
                                            }
                                          }
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        } else {
          result0 = null;
        }
        return result0;
      }
      
      function parse_sequence() {
        var result0, result1, result2, result3;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_cb_range();
        if (result0 === null) {
          result0 = parse_bcv_hyphen_range();
          if (result0 === null) {
            result0 = parse_range();
            if (result0 === null) {
              result0 = parse_ff();
              if (result0 === null) {
                result0 = parse_bcv_comma();
                if (result0 === null) {
                  result0 = parse_bc_title();
                  if (result0 === null) {
                    result0 = parse_ps151_bcv();
                    if (result0 === null) {
                      result0 = parse_bcv();
                      if (result0 === null) {
                        result0 = parse_bcv_weak();
                        if (result0 === null) {
                          result0 = parse_ps151_bc();
                          if (result0 === null) {
                            result0 = parse_bc();
                            if (result0 === null) {
                              result0 = parse_cv_psalm();
                              if (result0 === null) {
                                result0 = parse_bv();
                                if (result0 === null) {
                                  result0 = parse_b_range();
                                  if (result0 === null) {
                                    result0 = parse_c_psalm();
                                    if (result0 === null) {
                                      result0 = parse_b();
                                      if (result0 === null) {
                                        result0 = parse_cbv();
                                        if (result0 === null) {
                                          result0 = parse_cbv_ordinal();
                                          if (result0 === null) {
                                            result0 = parse_cb();
                                            if (result0 === null) {
                                              result0 = parse_cb_ordinal();
                                            }
                                          }
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        if (result0 !== null) {
          pos2 = pos;
          result2 = parse_sequence_sep();
          result2 = result2 !== null ? result2 : "";
          if (result2 !== null) {
            result3 = parse_sequence_post();
            if (result3 !== null) {
              result2 = [result2, result3];
            } else {
              result2 = null;
              pos = pos2;
            }
          } else {
            result2 = null;
            pos = pos2;
          }
          if (result2 !== null) {
            result1 = [];
            while (result2 !== null) {
              result1.push(result2);
              pos2 = pos;
              result2 = parse_sequence_sep();
              result2 = result2 !== null ? result2 : "";
              if (result2 !== null) {
                result3 = parse_sequence_post();
                if (result3 !== null) {
                  result2 = [result2, result3];
                } else {
                  result2 = null;
                  pos = pos2;
                }
              } else {
                result2 = null;
                pos = pos2;
              }
            }
          } else {
            result1 = null;
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, val_1, val_2) { val_2.unshift([val_1]); return {"type": "sequence", "value": val_2, "indices": [offset, pos - 1]} })(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_sequence_post_enclosed() {
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        if (input.charCodeAt(pos) === 40) {
          result0 = "(";
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"(\"");
          }
        }
        if (result0 !== null) {
          result1 = parse_sp();
          if (result1 !== null) {
            result2 = parse_sequence_sep();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = parse_sequence_post();
              if (result3 !== null) {
                result4 = [];
                pos2 = pos;
                result5 = parse_sequence_sep();
                result5 = result5 !== null ? result5 : "";
                if (result5 !== null) {
                  result6 = parse_sequence_post();
                  if (result6 !== null) {
                    result5 = [result5, result6];
                  } else {
                    result5 = null;
                    pos = pos2;
                  }
                } else {
                  result5 = null;
                  pos = pos2;
                }
                while (result5 !== null) {
                  result4.push(result5);
                  pos2 = pos;
                  result5 = parse_sequence_sep();
                  result5 = result5 !== null ? result5 : "";
                  if (result5 !== null) {
                    result6 = parse_sequence_post();
                    if (result6 !== null) {
                      result5 = [result5, result6];
                    } else {
                      result5 = null;
                      pos = pos2;
                    }
                  } else {
                    result5 = null;
                    pos = pos2;
                  }
                }
                if (result4 !== null) {
                  result5 = parse_sp();
                  if (result5 !== null) {
                    if (input.charCodeAt(pos) === 41) {
                      result6 = ")";
                      pos++;
                    } else {
                      result6 = null;
                      if (reportFailures === 0) {
                        matchFailed("\")\"");
                      }
                    }
                    if (result6 !== null) {
                      result0 = [result0, result1, result2, result3, result4, result5, result6];
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, val_1, val_2) { if (typeof(val_2) === "undefined") val_2 = []; val_2.unshift([val_1]); return {"type": "sequence_post_enclosed", "value": val_2, "indices": [offset, pos - 1]} })(pos0, result0[3], result0[4]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_sequence_post() {
        var result0;
        
        result0 = parse_sequence_post_enclosed();
        if (result0 === null) {
          result0 = parse_cb_range();
          if (result0 === null) {
            result0 = parse_bcv_hyphen_range();
            if (result0 === null) {
              result0 = parse_range();
              if (result0 === null) {
                result0 = parse_ff();
                if (result0 === null) {
                  result0 = parse_bcv_comma();
                  if (result0 === null) {
                    result0 = parse_bc_title();
                    if (result0 === null) {
                      result0 = parse_ps151_bcv();
                      if (result0 === null) {
                        result0 = parse_bcv();
                        if (result0 === null) {
                          result0 = parse_bcv_weak();
                          if (result0 === null) {
                            result0 = parse_ps151_bc();
                            if (result0 === null) {
                              result0 = parse_bc();
                              if (result0 === null) {
                                result0 = parse_cv_psalm();
                                if (result0 === null) {
                                  result0 = parse_bv();
                                  if (result0 === null) {
                                    result0 = parse_b_range();
                                    if (result0 === null) {
                                      result0 = parse_c_psalm();
                                      if (result0 === null) {
                                        result0 = parse_b();
                                        if (result0 === null) {
                                          result0 = parse_cbv();
                                          if (result0 === null) {
                                            result0 = parse_cbv_ordinal();
                                            if (result0 === null) {
                                              result0 = parse_cb();
                                              if (result0 === null) {
                                                result0 = parse_cb_ordinal();
                                                if (result0 === null) {
                                                  result0 = parse_c_title();
                                                  if (result0 === null) {
                                                    result0 = parse_integer_title();
                                                    if (result0 === null) {
                                                      result0 = parse_cv();
                                                      if (result0 === null) {
                                                        result0 = parse_cv_weak();
                                                        if (result0 === null) {
                                                          result0 = parse_v_letter();
                                                          if (result0 === null) {
                                                            result0 = parse_integer();
                                                            if (result0 === null) {
                                                              result0 = parse_c();
                                                              if (result0 === null) {
                                                                result0 = parse_v();
                                                              }
                                                            }
                                                          }
                                                        }
                                                      }
                                                    }
                                                  }
                                                }
                                              }
                                            }
                                          }
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        return result0;
      }
      
      function parse_range() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_bcv_comma();
        if (result0 === null) {
          result0 = parse_bc_title();
          if (result0 === null) {
            result0 = parse_ps151_bcv();
            if (result0 === null) {
              result0 = parse_bcv();
              if (result0 === null) {
                result0 = parse_bcv_weak();
                if (result0 === null) {
                  result0 = parse_ps151_bc();
                  if (result0 === null) {
                    result0 = parse_bc();
                    if (result0 === null) {
                      result0 = parse_cv_psalm();
                      if (result0 === null) {
                        result0 = parse_bv();
                        if (result0 === null) {
                          result0 = parse_cbv();
                          if (result0 === null) {
                            result0 = parse_cbv_ordinal();
                            if (result0 === null) {
                              result0 = parse_c_psalm();
                              if (result0 === null) {
                                result0 = parse_cb();
                                if (result0 === null) {
                                  result0 = parse_cb_ordinal();
                                  if (result0 === null) {
                                    result0 = parse_c_title();
                                    if (result0 === null) {
                                      result0 = parse_integer_title();
                                      if (result0 === null) {
                                        result0 = parse_cv();
                                        if (result0 === null) {
                                          result0 = parse_cv_weak();
                                          if (result0 === null) {
                                            result0 = parse_v_letter();
                                            if (result0 === null) {
                                              result0 = parse_integer();
                                              if (result0 === null) {
                                                result0 = parse_c();
                                                if (result0 === null) {
                                                  result0 = parse_v();
                                                }
                                              }
                                            }
                                          }
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        if (result0 !== null) {
          result1 = parse_range_sep();
          if (result1 !== null) {
            result2 = parse_ff();
            if (result2 === null) {
              result2 = parse_bcv_comma();
              if (result2 === null) {
                result2 = parse_bc_title();
                if (result2 === null) {
                  result2 = parse_ps151_bcv();
                  if (result2 === null) {
                    result2 = parse_bcv();
                    if (result2 === null) {
                      result2 = parse_bcv_weak();
                      if (result2 === null) {
                        result2 = parse_ps151_bc();
                        if (result2 === null) {
                          result2 = parse_bc();
                          if (result2 === null) {
                            result2 = parse_cv_psalm();
                            if (result2 === null) {
                              result2 = parse_bv();
                              if (result2 === null) {
                                result2 = parse_cbv();
                                if (result2 === null) {
                                  result2 = parse_cbv_ordinal();
                                  if (result2 === null) {
                                    result2 = parse_c_psalm();
                                    if (result2 === null) {
                                      result2 = parse_cb();
                                      if (result2 === null) {
                                        result2 = parse_cb_ordinal();
                                        if (result2 === null) {
                                          result2 = parse_c_title();
                                          if (result2 === null) {
                                            result2 = parse_integer_title();
                                            if (result2 === null) {
                                              result2 = parse_cv();
                                              if (result2 === null) {
                                                result2 = parse_v_letter();
                                                if (result2 === null) {
                                                  result2 = parse_integer();
                                                  if (result2 === null) {
                                                    result2 = parse_cv_weak();
                                                    if (result2 === null) {
                                                      result2 = parse_c();
                                                      if (result2 === null) {
                                                        result2 = parse_v();
                                                      }
                                                    }
                                                  }
                                                }
                                              }
                                            }
                                          }
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, val_1, val_2) { return {"type": "range", "value": [val_1, val_2], "indices": [offset, pos - 1]} })(pos0, result0[0], result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_b() {
        var result0, result1, result2, result3;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        if (input.charCodeAt(pos) === 31) {
          result0 = "\x1F";
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"\\x1F\"");
          }
        }
        if (result0 !== null) {
          result1 = parse_any_integer();
          if (result1 !== null) {
            pos2 = pos;
            if (input.charCodeAt(pos) === 47) {
              result2 = "/";
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"/\"");
              }
            }
            if (result2 !== null) {
              if (/^[a-z]/.test(input.charAt(pos))) {
                result3 = input.charAt(pos);
                pos++;
              } else {
                result3 = null;
                if (reportFailures === 0) {
                  matchFailed("[a-z]");
                }
              }
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
